# Grimson-Stauffer

./: CMakeLists.txt  README.md
inc/: pixelModel.h
src/: main.cpp  pixelModel.cpp
