CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "grimsonStauffer" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
SET( PROJ_SOURCES   "src/main.cpp" "src/pixelModel.cpp" )
SET( PROJ_HEADERS   "inc/pixelModel.h" )
SET( PROJ_LIBRARIES "" )
SET( PROJ_INCLUDES  "inc" )

find_package( OpenCV REQUIRED )

PROJECT( ${PROJ_NAME} )
INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} ${OpenCV_INCLUDE_DIRS} )
ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} ${OpenCV_LIBS} )
